--- a/Codigo/Clase7/style.css
+++ b/Codigo/Clase7/style.css
@@ -1,53 +1,50 @@
-
+*{
+/*     box-sizing: border-box; */
+    box-sizing: content-box;
+}
 
 p{
     background-color: crimson;
-/*     display: inline-block; */
-/* width:200px;
-height: 250px; */
-}
-img{
-    display: none;
-    width: 74px;
-    height: 71px;
-}
-
-span{
-/*     display: inline-block; */
-    background-color: blue;
-    color: yellow;
-    width: 74px;
-    height: 71px;
-    margin-right: 20px;
-
-}
-
-a{  
-text-decoration: none;
-color: black;
+    color: white;
+    height: 300px;
 }
 
 li{
     display: inline-block;
-background-color: crimson;
-height: 50px;
-width: 150px;
-list-style: none;
-text-decoration: none;
+    background-color: blueviolet;
+    margin-right:20px ;
+    margin-left: 10px;
+/*     height: 50px;
+    width: 150px; */
+    padding: 20px 30px;
+
+}
+
+span{
+    background-color: blue;
+    color: yellow;
+/*     height: 300px; */
+
 margin-right: 20px;
+
+}
+
+.invisible{
+    display: none;
 }
 
 
+/* width = ANCHO
+height = ALTO
+MARGIN = MARGEN */
 
-/* WIDTH =  ANCHO
-HEIGHT = ALTO */
+/* top arriba
+left izq
+rigth derecha
+botton abajo */
 
-/* right  - derecha
-left - izquierda
-top  - arriba
-bottom - abajo */
-
-
-/* MODELO DE CAJA- BOX MODELING
+/* 3 cosas
+modelo de caja - box modeling
 FLEX 
 GRID */
+
