--- a/Codigo/Clase28/heroes/views/heroes.ejs
+++ b/Codigo/Clase28/heroes/views/heroes.ejs
@@ -5,7 +5,7 @@
     <article>
       <div class="containerHeroes">
         <%heroes.forEach(heroe=>{%>
-        <a href="/heroes/<%=heroe.id%>/bio">
+        <a href="/heroes/<%=heroe.id%>">
           <div class="cardHeroes cardHeroes<%=heroe.id%>">
             <div class="border">
               <h2 class="tituloHeroes"><%=heroe.nombre%></h2>
