--- a/Codigo/Clase28/heroes/views/partials/head.ejs
+++ b/Codigo/Clase28/heroes/views/partials/head.ejs
@@ -2,5 +2,6 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/stylesheets/style.css">
     <title><%=titulo%></title>
 </head>
